@@ -200,6 +200,7 @@ Changes:
 - On Windows, notifications are shown as toast notifications if app is not
   active.
 - On Windows, taskbar shows icon overlays based on app state.
+- Improved tooltips for Resources.
 
 Fixed Bugs:
 - Flickering in Resource Explorer View was fixed.
